# rust-demo

./: Cargo.toml  README.md  build.rs
env/: .env
src/: cornucopia.rs  main.rs
src/cornucopia/: cornucopia.rs  queries.rs
src/cornucopia/queries/: demos.sql
src/linfa/: run.rs
